# langgraph-data-analyst-agent-workbench

./: .coveragerc  .dockerignore  .env.example  .gitignore  AGENT_HANDOFF.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  requirements-dev.txt  requirements.txt  ruff.toml  start-dev.bat  stop-dev.bat
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  database.py  domain.py  http_middleware.py  main.py  observability.py  security.py  settings.py
backend/app/analysis/: __init__.py  report.py  router.py  schemas.py  service.py
backend/app/business/: __init__.py  metric_registry.py  template_registry.py
backend/app/datasets/: __init__.py  models.py  profiler.py  router.py  service.py  storage.py
backend/app/graph/: insight.py  labels.py  nodes.py  planner.py  prompts.py  report.py  review.py  state.py  workflow.py
backend/app/improvements/: __init__.py  defaults.py  models.py  router.py  service.py  storage.py
backend/app/intent/: __init__.py  answerability.py  filter_resolver.py
backend/app/llm/: health.py  provider.py
backend/app/ops/: __init__.py  models.py  router.py  service.py  storage.py
backend/app/runtime/: __init__.py  events.py  sse.py  task_store.py
backend/app/tests/: test_agent_ops.py  test_analysis_runtime_api.py  test_answerability_and_filters.py  test_api.py  test_business_templates.py  test_data_quality_rules.py  test_improvements_api.py  test_intent_regression.py  test_market_recommendation.py  test_model_provider.py  test_profiler.py  test_runtime_events.py  (+5 more)
(+67 files in other folders)
