[project]
name = "langgraph-data-analyst-workbench-backend"
version = "0.4.0"
description = "FastAPI + LangGraph data analyst agent workbench backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "python-multipart==0.0.20",
  "pydantic==2.11.7",
  "langgraph==0.5.1",
  "langchain-core==0.3.68",
  "langchain-openai==0.3.27",
  "pandas==2.3.0",
  "numpy==2.3.1",
  "duckdb==1.3.1",
  "scipy==1.16.0",
  "openpyxl==3.1.5",
  "PyJWT[crypto]==2.10.1"
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "httpx==0.28.1",
  "coverage==7.9.2",
  "ruff==0.12.3"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501", "B008"]
